--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,30 @@
 fastapi
 langchain
 langchain-community
+langchain_astradb
+langchain_core
+
+
+-e .
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+# pip install -r requirements.txt
